--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -32,7 +32,7 @@
       </div>
       <div class="col-xs-12 col-md-4">
         <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1" data-toggle="modal" data-target="#ticket-list-modal">
-          ซื้อตั๋ว - <%= @section.price %>
+          ซื้อตั๋ว - ฿<%= @section.price %>
         </button>
         <div class="map-panel">
           <div id="google-map"></div>
