--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -164,6 +164,7 @@
   <div class="modal fade" tabindex="-1" role="dialog" id="login-modal">
     <div class="modal-dialog modal-sm" role="document">
       <%= render partial: "layouts/parts/login-form" %>
+      <%= render partial: "layouts/parts/register-form" %>
     </div>
   </div>
 
@@ -172,7 +173,7 @@
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=589404977838310";
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.7&appId=259929777688738";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
   </script>
