--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -52,43 +52,98 @@
       <div class="col-xs-12 col-md-8">
         <%= form_tag client_event_checkout_path(@event.id), id: :checkout do  %>
           <input type="hidden" name="event_id" value="<%= @event.id %>" />
+          <div class="form-section highlight" id="general-info-section">
+            <div class="form-section-header">
+              <h2 class="form-section-title">Quick Checkout</h2>
+              <div class="form-section-description">
+                ซื้อตั๋วผ่าน Facebook Login ในคลิกเดียว
+              </div>
+            </div>
+            <div class="form-section-body">
+              <div class="form-section-description">
+                <a href="/auth/facebook"><img src="/src/images/theme/fb-login.png" height="40" /></a>
+              </div>
+            </div>
+          </div>
           <div class="form-section" id="general-info-section">
             <div class="form-section-header">
-              <h2 class="form-sectiont-title">Your Details</h2>
+              <h2 class="form-sectiont-title">Checkout with E-mail</h2>
               <div class="form-section-description">
                 We need a couple details in case something changes.<br />
                 We'll send the tickets to your phone and email.
+                or <a data-toggle="modal" data-target="#login-modal" href="#login-modal">Login</a>
               </div>
             </div>
-            <div class="form-section-body row">
-              <div class="form-group col-xs-12 col-md-6">
-                <label>Firstname</label>
-                <input class="form-control" type="text" name="firstname" value="" />
-              </div>
-              <div class="form-group col-xs-12 col-md-6">
-                <label>Lastname</label>
-                <input class="form-control" type="text" name="lastname" value="" />
-              </div>
-              <div class="form-group col-xs-12 col-md-6">
-                <label>E-mail</label>
-                <input class="form-control" type="email" name="email" value="" />
-              </div>
-              <div class="form-group col-xs-12 col-md-6">
-                <label>Phone Number</label>
-                <input class="form-control" type="text" name="phone" value="" />
-              </div>
-              <div class="form-group col-xs-12 col-md-6">
-                <label>
-                  <input type="checkbox" name="signup" value="1" />
-                  Signup for Daydash Account for FREE
-                </label>
+            <div class="form-section-body">
+              <div class="row">
+                <div class="form-group col-xs-12 col-md-6">
+                  <label>Firstname</label>
+                  <input class="form-control" type="text" name="firstname" value="" />
+                </div>
+                <div class="form-group col-xs-12 col-md-6">
+                  <label>Lastname</label>
+                  <input class="form-control" type="text" name="lastname" value="" />
+                </div>
+                <div class="form-group col-xs-12 col-md-6">
+                  <label>Phone Number</label>
+                  <input class="form-control" type="text" name="phone" value="" />
+                </div>
+                <div class="form-group dob-form-group col-xs-12 col-md-6">
+                  <label>Date of Birth</label>
+                  <div class="form-inline">
+                    <select class="form-control" name="dob_date">
+                      <option value="">Date</option>
+                      <% (1..31).each do |date| %>
+                      <option value="<%= date %>"><%= date %></option>
+                      <% end %>
+                    </select>
+                    <select class="form-control" name="dob_month">
+                      <option value="">Month</option>
+                      <% (1..12).each do |month| %>
+                      <option value="<%= month %>"><%= month %></option>
+                      <% end %>
+                    </select>
+                    <select class="form-control" name="dob_year">
+                      <option value="">Year</option>
+                      <% (0..99).each do |year| %>
+                      <option value="<%= (Time.now.year - year) %>"><%= (Time.now.year - year) %></option>
+                      <% end %>
+                    </select>
+                  </div>
+                </div>
+                <div class="form-group gender-form-group col-xs-12 col-md-6">
+                  <label>Gender</label>
+                  <div class="form-inline">
+                    <label class="radio">
+                      <input type="radio" name="gender" value="female" />
+                      Female
+                    </label>
+                    <label class="radio">
+                      <input type="radio" name="gender" value="male" />
+                      Male
+                    </label>
+                    <label class="radio">
+                      <input type="radio" name="gender" value="not_specify" />
+                      Not specify
+                    </label>
+                  </div>
+                </div>
+                <div class="form-group col-xs-12 col-md-6" style="clear: left;">
+                  <label>E-mail</label>
+                  <input class="form-control" type="email" name="email" value="" />
+                </div>                
+                <div class="form-group col-xs-12 col-md-6">
+                  <label>Password</label>
+                  <input class="form-control" type="password" name="password" value="" />
+                </div>
+
               </div>
             </div>
           </div>
           <div class="form-section" id="payment-method-section">
             <div class="form-section-header">
               <h2 class="form-section-title">Payment Method</h2>
-              <ul class="nav nav-tabs" role="tablist">
+              <ul class="nav nav-tabs nav-justified nav-tabs-black nav-tabs-daydash" role="tablist">
                 <li class="active"><a href="#payment-method-credit-card-panel" role="tab" data-toggle="tab">Credit Card</a></li>
                 <li ><a href="#payment-method-bank-panel" role="tab" data-toggle="tab">Bank Transfer</a></li>
               </ul>
@@ -96,23 +151,23 @@
             <div class="form-section-body">
               <div class="tab-content">
                 <div role="tabpanel" class="tab-pane active" id="payment-method-credit-card-panel">
-                  <div class="row">
+                  <div class="row error" style="display: none;">
                     <div class="form-group col-xs-12 col-md-12">
                       <div id="token_errors"></div>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="form-group col-xs-12 col-md-5">
+                    <div class="form-group col-xs-12 col-md-6">
                       <label>Name</label>
                       <input class="form-control" type="text" name="card_name" value="" data-omise="holder_name">
                     </div>
-                    <div class="form-group col-xs-12 col-md-5">
+                    <div class="form-group col-xs-12 col-md-6">
                       <label>Card Number</label>
                       <input class="form-control" type="text" name="card_number" value="" data-omise="number"/>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="form-group col-xs-12 col-md-4">
+                    <div class="form-group col-xs-12 col-md-6">
                       <label>Expire Date</label>
                       <div class="form-inline">
                         <select class="form-control" name="expire_month" data-omise="expiration_month">
@@ -129,7 +184,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="form-group col-xs-12 col-md-3">
+                    <div class="form-group col-xs-12 col-md-6">
                       <label>CVV</label>
                       <input class="form-control" type="text" name="cvv" value="" data-omise="security_code" />
                     </div>
@@ -138,7 +193,7 @@
                     <div>
                       <label>
                         <input type="checkbox" name="accept_policy" value="1" />
-                        I have read and accept Daydash <a href="#">Payment Policy</a>
+                        I have read and accept Daydash <a data-toggle="modal" data-target="#policy-modal" href="#policy-modal">Payment Policy</a>
                       </label>
                     </div>
                     <script src="https://cdn.omise.co/omise.js"></script>
@@ -210,7 +265,7 @@
                     <div>
                       <label>
                         <input type="checkbox" name="accept_policy" value="1" />
-                        I have read and accept Daydash <a href="#">Payment Policy</a>
+                        I have read and accept Daydash <a data-toggle="modal" data-target="#policy-modal" href="#policy-modal">Payment Policy</a>
                       </label>
                     </div>
                     <button class="btn btn-block btn-lg btn-daydash btn-daydash-green-1" data-btn="payment-method" value="bank_transfer" >Place an order</button>
@@ -224,5 +279,11 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="policy-modal">
+    <div class="modal-dialog" role="document">
+      <%= render partial: "layouts/parts/payment-policy" %>
+    </div>
+  </div>
 
 
