--- a/public/src/packages/daydash/home.css
+++ b/public/src/packages/daydash/home.css
@@ -36,7 +36,8 @@
   font-weight: 200; }
 html, body {
   height: 100%;
-  font-family: "Athiti", "Helvetica Neue", "sans-serif"; }
+  font-family: "Athiti", "Helvetica Neue", "sans-serif";
+  color: #444; }
 
 #topbar .navbar {
   margin-bottom: 0px; }
@@ -52,7 +53,7 @@ html, body {
 
 #main {
   min-height: 800px;
-  padding-bottom: 500px; }
+  padding-bottom: 550px; }
   @media all and (max-width: 991px) {
     #main {
       padding-bottom: 785px; } }
@@ -69,7 +70,10 @@ html, body {
   #footer .col {
     margin-top: 80px; }
   #footer a {
+    text-decoration: none;
     color: #aaa; }
+    #footer a:hover {
+      color: white; }
   #footer .list-panel .list-title {
     margin-bottom: 25px;
     color: #eee;
@@ -82,7 +86,8 @@ html, body {
     color: #aaa;
     margin-bottom: 5px; }
     #footer .list-panel .list-body li a:hover, #footer .list-panel .list-body li a:active, #footer .list-panel .list-body li a:focus, #footer .list-panel .list-body li a.active {
-      background: transparent; }
+      background: transparent;
+      color: white; }
   #footer .social-list {
     margin-bottom: 15px; }
     #footer .social-list .list-inline li {
@@ -92,6 +97,37 @@ html, body {
     margin-bottom: 5px; }
   #footer .cert-list {
     margin-top: 50px; }
+
+#login-modal .modal-title {
+  text-align: center; }
+#login-modal .fb-login {
+  margin-bottom: 15px;
+  text-align: center; }
+  #login-modal .fb-login img {
+    height: 40px; }
+#login-modal .seperator {
+  border-top: 1px solid #444;
+  margin-top: 25px;
+  margin-bottom: 15px; }
+  #login-modal .seperator .inner {
+    margin-top: -16px; }
+  #login-modal .seperator span {
+    display: inline-block;
+    padding: 5px 15px;
+    background: white; }
+#login-modal .forgot-password {
+  margin-top: 15px;
+  text-align: center; }
+#login-modal .modal-footer {
+  text-align: center; }
+
+@media (max-width: 991px) {
+  #main {
+    padding-bottom: 1400px; } }
+a {
+  color: #00CFD1; }
+  a:hover {
+    color: #00E9CA; }
 
 label {
   font-weight: normal; }
@@ -160,10 +196,12 @@ label {
     color: white; }
 
 .event.card, .ticket.card {
+  display: block;
   margin-bottom: 30px;
   border-radius: 2px;
   border: 1px solid #eee;
-  overflow: hidden; }
+  overflow: hidden;
+  text-decoration: none; }
   .event.card .cover, .ticket.card .cover {
     background-size: cover;
     background-position: center;
@@ -240,6 +278,24 @@ label {
     color: #444;
     border-bottom: 3px solid #00CFD1; }
 
+.nav-tabs-daydash, .nav-tabs-daydash.nav-justified {
+  margin-bottom: 15px; }
+  .nav-tabs-daydash li a, .nav-tabs-daydash li a:visited, .nav-tabs-daydash li a:link, .nav-tabs-daydash li a:active, .nav-tabs-daydash.nav-justified li a, .nav-tabs-daydash.nav-justified li a:visited, .nav-tabs-daydash.nav-justified li a:link, .nav-tabs-daydash.nav-justified li a:active {
+    background: transparent;
+    color: #aaa;
+    border: 0px;
+    border-bottom: 3px solid #eee; }
+  .nav-tabs-daydash li:hover a, .nav-tabs-daydash li:hover a:hover, .nav-tabs-daydash.nav-justified li:hover a, .nav-tabs-daydash.nav-justified li:hover a:hover {
+    color: #444; }
+  .nav-tabs-daydash li.active a, .nav-tabs-daydash li.active a:visited, .nav-tabs-daydash li.active a:link, .nav-tabs-daydash li.active a:active, .nav-tabs-daydash li.active:hover a, .nav-tabs-daydash li.active:hover a:visited, .nav-tabs-daydash li.active:hover a:link, .nav-tabs-daydash li.active:hover a:active, .nav-tabs-daydash.nav-justified li.active a, .nav-tabs-daydash.nav-justified li.active a:visited, .nav-tabs-daydash.nav-justified li.active a:link, .nav-tabs-daydash.nav-justified li.active a:active, .nav-tabs-daydash.nav-justified li.active:hover a, .nav-tabs-daydash.nav-justified li.active:hover a:visited, .nav-tabs-daydash.nav-justified li.active:hover a:link, .nav-tabs-daydash.nav-justified li.active:hover a:active {
+    border-radius: 0px;
+    background: transparent;
+    color: #444;
+    border: 0px;
+    border-bottom: 3px solid #00CFD1; }
+  .nav-tabs-daydash.nav-tabs-black li.active a, .nav-tabs-daydash.nav-tabs-black li.active a:visited, .nav-tabs-daydash.nav-tabs-black li.active a:link, .nav-tabs-daydash.nav-tabs-black li.active a:active, .nav-tabs-daydash.nav-tabs-black li.active:hover a, .nav-tabs-daydash.nav-tabs-black li.active:hover a:visited, .nav-tabs-daydash.nav-tabs-black li.active:hover a:link, .nav-tabs-daydash.nav-tabs-black li.active:hover a:active, .nav-tabs-daydash.nav-justified.nav-tabs-black li.active a, .nav-tabs-daydash.nav-justified.nav-tabs-black li.active a:visited, .nav-tabs-daydash.nav-justified.nav-tabs-black li.active a:link, .nav-tabs-daydash.nav-justified.nav-tabs-black li.active a:active, .nav-tabs-daydash.nav-justified.nav-tabs-black li.active:hover a, .nav-tabs-daydash.nav-justified.nav-tabs-black li.active:hover a:visited, .nav-tabs-daydash.nav-justified.nav-tabs-black li.active:hover a:link, .nav-tabs-daydash.nav-justified.nav-tabs-black li.active:hover a:active {
+    border-bottom: 3px solid #444; }
+
 .list-action-nav li:not(:last-child):after {
   content: "|";
   display: inline-block;
@@ -253,16 +309,31 @@ label {
     background-repeat: no-repeat;
     background-color: black;
     height: 400px; }
-    #index-page #cover-section .slick .page-cover .caption {
+    #index-page #cover-section .slick .page-cover:before {
+      content: " ";
+      display: block;
+      position: absolute;
+      top: 0px;
+      bottom: 0px;
+      left: 0px;
+      right: 0px;
+      background: rgba(0, 0, 0, 0.3); }
+  #index-page #cover-section .slick .info {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px; }
+    #index-page #cover-section .slick .info .caption {
       margin-top: 150px;
       text-align: center;
       color: white;
-      text-shadow: 2px 2px rgba(0, 0, 0, 0.3); }
-      #index-page #cover-section .slick .page-cover .caption .title {
+      text-shadow: 0px 1px rgba(0, 0, 0, 0.3); }
+      #index-page #cover-section .slick .info .caption .title {
         font-family: "Kanit", "Helvetica Neue", "sans-serif";
         font-size: 48px;
         font-weight: bold; }
-      #index-page #cover-section .slick .page-cover .caption .subtitle {
+      #index-page #cover-section .slick .info .caption .subtitle {
         font-size: 24px; }
 #index-page #event-section {
   background-color: #fcfcfc;
@@ -362,27 +433,30 @@ label {
   #event-page #ticket-list-modal .ticket .ticket-title {
     font-weight: bold; }
 
+#payment-page .form-section.highlight {
+  padding: 15px;
+  background: #f4f4f4; }
 #payment-page .form-section-description {
   margin-bottom: 15px; }
 #payment-page #payment-method-section .nav-tabs {
-  margin-bottom: 15px;
+  margin-bottom: 30px;
   border-bottom: 0px; }
   #payment-page #payment-method-section .nav-tabs li {
-    margin-bottom: 0px;
-    width: 50%; }
-    #payment-page #payment-method-section .nav-tabs li a {
-      border: 1px solid #444;
-      text-align: center;
-      border-radius: 0px;
-      color: #444; }
-    #payment-page #payment-method-section .nav-tabs li.active a {
-      font-weight: bold; }
+    margin-bottom: 0px; }
 #payment-page #payment-method-section select.form-control {
   width: 45%; }
 #payment-page #payment-method-section .form-section-footer {
   margin-top: 30px; }
   #payment-page #payment-method-section .form-section-footer .btn {
     margin-top: 15px; }
+#payment-page .dob-form-group .form-inline .form-control {
+  display: inline-block;
+  width: 30%; }
+@media (max-width: 991px) {
+  #payment-page .gender-form-group .form-inline {
+    padding-left: 30px; } }
+#payment-page .form-group .radio {
+  margin-right: 15px; }
 
 #payment-complete-page #credit-card-inform-section {
   padding-top: 50px;
