--- a/public/src/packages/daydash/sass/home/_index.scss
+++ b/public/src/packages/daydash/sass/home/_index.scss
@@ -10,11 +10,24 @@
 				background-color: black;
 				height: 400px;
 
+				&:before {
+					content: " ";
+					display: block;
+					position: absolute;
+					top: 0px; bottom: 0px; left: 0px; right: 0px;
+					background: rgba(0,0,0,0.3);
+				}
+			}
+
+			.info {
+				position: absolute;
+				top: 0px; bottom: 0px; left: 0px; right: 0px;
+
 				.caption {
 					margin-top: 150px;
 					text-align: center;
 					color: white;
-					text-shadow: 2px 2px rgba(0,0,0,0.3);
+					text-shadow: 0px 1px rgba(0,0,0,0.3);
 
 					.title {
 						font-family: $font-kanit;
@@ -27,6 +40,7 @@
 					}
 				}
 			}
+
 		}
 	}
 
