--- a/public/src/packages/daydash/sass/home/_main.scss
+++ b/public/src/packages/daydash/sass/home/_main.scss
@@ -38,6 +38,19 @@ html, body {
 			height: 40px;
 		}
 	}
+
+	.navbar-nav {
+		padding-top: 10px;
+
+		li {
+			a {
+				&:hover, &:active, &:link, &:visited {
+					background: transparent;
+				}
+			}
+
+		}
+	}
 }
 
 #wrapper {
