--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -17,7 +17,7 @@
 <div class="section" id="event-section">
   <div class="container">
     <ul class="nav nav-pills nav-daydash">
-      <li class="active"><a href="/">ALL</a></li>
+      <li class="active"><a href="#" onclick="return on_events_filter(this, {});">ALL</a></li>
       <!-- <li><a href="#">ENTERTAINMENT</a></li>
       <li><a href="#">OUTDOOR&amp;ADVENTURE</a></li>
       <li><a href="#">FITNESS</a></li>
@@ -26,7 +26,7 @@
       <% if @categories.size > 0 %>
         <% @categories.each do |category| %>
           <li>
-            <%= link_to category.title, client_category_path(category)  %>
+            <a href="#" onclick="return on_events_filter(this, {category_id: '<%= category.id %>'});"><%= category.title %></a>
           </li>
         <% end %>
       <% end %>
@@ -38,7 +38,7 @@
     </ul>
     <div class="row event-list">
       <% @events.each do |event| %>
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
           <a class="event card" href="<%= client_event_path(event.id) %>">
             <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
             <div class="info">
@@ -73,4 +73,24 @@ function init_slick() {
 $(function() {
   init_slick();
 });
+</script>
+
+<script> //View Function
+function on_events_filter(element, options) {
+
+  if(options['category_id'] != undefined) {
+    var category_id = options['category_id'];
+    $('#event-section .event-list .event-wrapper').not('.event-category-'+category_id).hide();
+    $('#event-section .event-list .event-wrapper.event-category-'+category_id).show();
+  }
+  else {
+    $('#event-section .event-list .event-wrapper').show();
+  }
+
+  //Update nav
+  $(element).parents('.nav').find('li').removeClass('active');
+  $(element).parent().addClass('active');
+
+  return false;
+}
 </script>
