--- a/app/views/client/profile/wishlist.html.erb
+++ b/app/views/client/profile/wishlist.html.erb
@@ -10,7 +10,7 @@
       <div class="col-xs-12 col-md-9">
         <div class="event-list">
           <div class="list-header">
-            <h1 class="list-title">Wishlist</h1>
+            <h1 class="list-title">Wishlist <small><%= @events.length %></small></h1>
           </div>
           <div class="list-body row">
             <% @events.each do |event| %>
