--- a/public/src/packages/daydash/home.css
+++ b/public/src/packages/daydash/home.css
@@ -46,10 +46,35 @@ html, body {
   height: 60px; }
   #topbar .navbar-brand img {
     height: 40px; }
-#topbar .navbar-nav {
-  padding-top: 10px; }
-  #topbar .navbar-nav li a:hover, #topbar .navbar-nav li a:active, #topbar .navbar-nav li a:link, #topbar .navbar-nav li a:visited {
-    background: transparent; }
+#topbar .navbar-nav > li > a {
+  padding: 20px;
+  font-size: 18px;
+  font-weight: 200; }
+#topbar .navbar-nav > li .btn-daydash-green-2 {
+  background: #19D4D6;
+  color: white;
+  border: 0px; }
+  #topbar .navbar-nav > li .btn-daydash-green-2:hover, #topbar .navbar-nav > li .btn-daydash-green-2:active, #topbar .navbar-nav > li .btn-daydash-green-2:visited, #topbar .navbar-nav > li .btn-daydash-green-2:link {
+    background: #19D4D6;
+    color: white; }
+#topbar .navbar-nav .user-dropdown .user-profile-photo {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #ccc; }
+#topbar .navbar-nav .user-dropdown .dropdown-toggle {
+  padding: 15px 30px; }
+#topbar .navbar-nav .user-dropdown .dropdown-menu {
+  min-width: 200px;
+  padding: 0px; }
+  #topbar .navbar-nav .user-dropdown .dropdown-menu li a {
+    padding: 15px 20px;
+    font-size: 14px;
+    font-weight: 200;
+    border-bottom: 1px solid #eee; }
 
 #wrapper {
   position: relative;
@@ -200,6 +225,15 @@ label {
   color: white;
   border: 0px; }
   .btn-daydash-green-1:hover, .btn-daydash-green-1:active, .btn-daydash-green-1:visited, .btn-daydash-green-1:link {
+    background: linear-gradient(90deg, #00CFD1, #00E9CA);
+    color: white; }
+
+.btn-daydash-green-2 {
+  background: #19D4D6;
+  color: white;
+  border: 0px; }
+  .btn-daydash-green-2:hover, .btn-daydash-green-2:active, .btn-daydash-green-2:visited, .btn-daydash-green-2:link {
+    background: #19D4D6;
     color: white; }
 
 .event.card, .ticket.card {
@@ -363,7 +397,7 @@ label {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    box-shadow: inset 0 -50px 100px -30px rgba(0, 0, 0, 0.7); }
+    box-shadow: inset 0 -150px 200px -100px rgba(0, 0, 0, 0.7); }
   #event-page #cover-section .info {
     position: absolute;
     left: 0px;
@@ -387,16 +421,19 @@ label {
   #event-page #info-section .meta {
     float: left;
     margin-right: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     font-size: 16px; }
     #event-page #info-section .meta .icon {
       float: left;
       margin-top: 1px;
       margin-right: 5px; }
   #event-page #info-section .description {
-    margin-bottom: 50px;
+    font-family: sans-serif;
     font-size: 16px;
-    line-height: 1.8em; }
+    font-weight: 200;
+    letter-spacing: 0.2px;
+    margin-bottom: 50px;
+    line-height: 1.7em; }
   #event-page #info-section .gallery {
     margin-left: -5px;
     margin-right: -5px; }
@@ -502,6 +539,8 @@ label {
   background-repeat: no-repeat;
   margin: 30px auto; }
 
+#profile-wishlist-page h1 small {
+  font-size: 20px; }
 #profile-wishlist-page .event-list .event .cover {
   height: 200px; }
 
