--- a/public/src/packages/daydash/sass/home/_profile.scss
+++ b/public/src/packages/daydash/sass/home/_profile.scss
@@ -24,6 +24,13 @@
 }
 
 #profile-wishlist-page {
+
+  h1 {
+    small {
+      font-size: 20px;
+    }
+  }
+
   .event-list {
     .event {
       .cover {
