--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -12,7 +12,7 @@
 <div class="section" id="info-section">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12 col-md-8">
+      <div class="col-xs-12 col-md-7">
         <div class="row">
           <div class="col-xs-12">
             <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= @section.event_time.strftime("%A %d %B, %H:%M") %></div>
@@ -30,6 +30,7 @@
           <% end %>
         </div>
       </div>
+      <div class="col-md-1"></div>
       <div class="col-xs-12 col-md-4">
         <button type="button" class="btn btn-block btn-daydash btn-daydash-lg btn-daydash-green-1" data-toggle="modal" data-target="#ticket-list-modal">
           ซื้อตั๋ว - ฿<%= @section.price %>
