--- a/public/src/packages/daydash/sass/home/_event.scss
+++ b/public/src/packages/daydash/sass/home/_event.scss
@@ -12,7 +12,7 @@
 			background-position: center;
 			background-repeat: no-repeat;
 
-			box-shadow: inset 0 -50px 100px -30px rgba(0,0,0,0.7);
+			box-shadow: inset 0 -150px 200px -100px rgba(0,0,0,0.7);
 		}
 
 		.info {
@@ -45,7 +45,7 @@
 		.meta {
 			float: left;
 			margin-right: 15px;
-			margin-bottom: 10px;
+			margin-bottom: 20px;
 			font-size: 16px;
 
 			.icon {
@@ -56,9 +56,12 @@
 		}
 
 		.description {
-			margin-bottom: 50px;
+			font-family: $font-sans-serif;
 			font-size: 16px;
-			line-height: 1.8em;
+			font-weight: 200;
+			letter-spacing: 0.2px;
+			margin-bottom: 50px;
+			line-height: 1.7em;
 		}
 
 		.gallery {
