--- a/app/views/client/profile/tickets.html.erb
+++ b/app/views/client/profile/tickets.html.erb
@@ -7,9 +7,6 @@
     <script>$('#profile-nav #menu-my-tickets').addClass('active');</script>
 
     <div class="row">
-      <div class="col-xs-12 col-md-3">
-        <%= render partial: "client/profile/parts/profile-user-panel" %>
-      </div>
       <div class="col-xs-12 col-md-9">
         <div class="ticket-list">
           <div class="list-header">
@@ -23,11 +20,10 @@
           <div class="list-body">
             <% @tickets.each do |ticket| %>
             <div class="ticket card-side-cover">
-              <div class="cover" style="background-image: url(<%= ticket[:event].get_thumbnail %>);">
-              </div>
+              <a class="cover" style="background-image: url(<%= ticket[:event].get_thumbnail %>);" href="#"></a>
               <div class="info">
                 <div class="info-body">
-                  <h4 class="title"><%= ticket[:event].title %></h4>
+                  <h4 class="title"><a href="#"><%= ticket[:event].title %></a></h4>
                   <div class="meta date">วันเสาร์ ที่ 22 สิงหาคม, 8:00 PM</div>
                   <div class="meta location">Thonglor House Club, ซอยทองหล่อ</div>
                 </div>
